# MelodyMart

./: .gitignore  README.md  package-lock.json  package.json
ecommerce/: How to Play Castanets - Yui Hirasawa.mkv  README.md  delete this please  package-lock.json  package.json  requestMethods.js
ecommerce/public/: index.html
ecommerce/src/: App.jsx  data.js  index.js  requestMethods.js  responsive.js
ecommerce/src/components/: Announcement.jsx  Categories.jsx  CategoryItem.jsx  Footer.jsx  Navbar.jsx  Newsletter.jsx  Product.jsx  Products.jsx  Slider.jsx
ecommerce/src/pages/: Cart.jsx  Home.jsx  Login.jsx  Product.jsx  ProductList.jsx  Register.jsx
ecommerce/src/redux/: apiCalls.js  cartRedux.js  store.js  userRedux.js
ecommerceapi/: README.md  docker-compose.yml  index.js  package-lock.json  package.json
ecommerceapi/models/: Cart.js  Discount.js  Order.js  Product.js  User.js
ecommerceapi/routes/: auth.js  cart.js  discount.js  order.js  product.js  user.js  verifyToken.js
rust/gen-users/: Cargo.toml  mongo.json.example
rust/gen-users/src/: action.rs  cli.rs  lib.rs  main.rs
src/: App.js  App.jsx  README.md  data.js  index.js  requestMethods.js
src/components/: Categories.jsx  CategoryItem.jsx  Footer.jsx  Navbar.jsx  Newsletter.jsx  Product.jsx  Products.jsx  Slider.jsx
src/components/chart/: Chart.jsx
src/components/featuredInfo/: FeaturedInfo.jsx
src/pages/: Cart.jsx  Home.jsx  Login.jsx  Product.jsx  ProductList.jsx  Register.jsx
src/redux/: apiCalls.js  discountRedux.js  orderRedux.js  productRedux.js  store.js  userRedux.js
(+32 files in other folders)
