[package]
name = "gen-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
mimalloc = "0.1.37"
mongodb = { version = "2.6.0", features = ["bson-chrono-0_4"] }
rayon = "1.7.0"
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["rt", "io-util", "io-std", "time"] }
tokio-stream = "0.1.14"
